--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<canvas id="spiders"></canvas>
 		<h1>Espaces</h1>
 		<p>Une démo “Spiders” avec <em>TweenLite.min.js</em> de <a target="_blank" href="https://greensock.com/">Greensock</a></p>
-		<script src="./assets/js/jquery-2.2.4.min.js"></script>
+		<script src="./assets/js/jquery-3.6.4.slim.min.js"></script>
 		<script src="./assets/js/TweenLite.min.js"></script>
 		<script src="./assets/js/spiders.js"></script>
 	</body>
